--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .navbar-main {
     width: 100%;
-    background-color: #343D45;
+    background-color: #1E272E;
     height: 70px;
     padding: 0 50px;
     color: white;
@@ -34,7 +34,9 @@
     resize: none;
     color: white;
     font-family: 'Roboto', sans-serif;
-    padding: 30px
+    padding: 30px;
+    font-size: 20px;
+    line-height: 1.2em;
 }
 
 button {
